--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 mongodb+srv://admin:Azikk0304@cluster0.r9krud2.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 PORT=3000
+
+VITE_BACKEND_URL=http://0.0.0.0:3000
