--- a/.env
+++ b/.env
@@ -1,4 +1,6 @@
-mongodb+srv://admin:Azikk0304@cluster0.r9krud2.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI=mongodb+srv://admin:Azikk0304@cluster0.r9krud2.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 PORT=3000
+
+
 
 VITE_BACKEND_URL=http://0.0.0.0:3000
